# LonghornAI

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  pyproject.toml
bench/: bench_main.cpp  bench_util.hpp
docs/silicon/: README.md  architecture.md  isa.md  kernel_engine_map.md  perf_model.md  roadmap.md  roofline.md
docs/silicon/kernels/: activation.md  attention.md  conv1d.md  embedding.md  gemm.md  gemm_quant.md  kvcache.md  linear_attn.md  moe.md  normalization.md  positional.md  quant.md  reduction.md  rope.md  rwkv.md  sampling.md  softmax.md  speculative.md  ssm.md  transform.md
longhornai/: __init__.py
longhornai/backends/: __init__.py  _clone.py  cpu.py  fpga.py  lhsil.py  rtl.py  sim.py
longhornai/benchmarks/: __init__.py  cost.py  decode_baseline.json  decode_bench.py  full_sweep.py  full_sweep_baseline.json  gemm_baseline.json  harness.py  shape_suite.py
longhornai/cli/: __init__.py  __main__.py
longhornai/compiler/: __init__.py  autotune.py  autotune_cache.py
longhornai/kernels/: __init__.py  activation.py  elementwise.py  gemm.py  normalization.py
longhornai/kernels/activation/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/attention/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/collectives/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/elementwise/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/fused/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/gemm/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/kv_cache/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/moe/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/normalization/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/paged_attention/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/quant/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/kernels/sparse_attention/: KERNEL.md  __init__.py  impl.py  reference.py  tuning.py
longhornai/models/: __init__.py  deepseek.py  gemma.py  llama.py  llama_block.py  llama_quantized.py  mistral.py  mixtral.py  phi.py  qwen.py
longhornai/quantization/: __init__.py  primitives.py  sparsity.py
longhornai/quantization/calibration/: __init__.py  awq.py  gptq.py  smooth_quant.py
longhornai/runtime/: __init__.py  backend.py  expert_parallel.py  inference.py  pipeline_parallel.py  scheduler.py  speculative.py  tensor_parallel.py
longhornai/validation/: __init__.py  bf16.py  differential.py  equivalence.py  readiness.py  reference.py  regression.py  silicon_smoke.py  tolerance.py
src/core/: allocator.hpp  dtype.hpp  profiler.cpp  profiler.hpp  tensor.hpp  tracing.hpp
src/kernels/: activation.cpp  activation.hpp  attention.cpp  attention.hpp  conv1d.cpp  conv1d.hpp  dtypes.hpp  embedding.cpp  embedding.hpp  gemm.cpp  gemm.hpp  gemm_quant.cpp  gemm_quant.hpp  kvcache.cpp  kvcache.hpp  kvcache_quant.cpp  kvcache_quant.hpp  linear_attn.cpp  linear_attn.hpp  moe.cpp  moe.hpp  normalization.cpp  normalization.hpp  paged_attention.cpp  paged_attention.hpp  positional.cpp  positional.hpp  quant.cpp  quant.hpp  reduction.cpp  reduction.hpp  rope.cpp  rope.hpp  rwkv.cpp  rwkv.hpp  sampling.cpp  sampling.hpp  softmax.cpp  softmax.hpp  speculative.cpp  (+6 more)
src/runtime/: cache_manager.cpp  cache_manager.hpp  prefix_cache.cpp  prefix_cache.hpp  scheduler.cpp  scheduler.hpp
tests/: CMakeLists.txt  conftest.py  test_activation.cpp  test_attention.cpp  test_attention.py  test_attention_ext.cpp  test_benchmark.py  test_bf16.py  test_cache_manager.cpp  test_calibration.py  test_collectives.py  test_continuous_batching.py  test_decode_bench.py  test_dtypes.cpp  test_embedding.cpp  test_flash_v2_and_mha.py  test_fpga_equivalence.py  test_gemm.cpp  test_gemm.py  test_gemm_quant.cpp  test_gemma_phi.py  test_kernels.py  test_kv_cache.py  test_kvcache_quant.cpp  test_llama_forward.py  test_m7_silicon_and_advanced.py  test_m8_production_readiness.py  test_mistral_qwen.py  test_models_and_quant.py  test_moe.cpp  test_moe_mixtral_parallel.py  test_normalization.cpp  test_paged_attention.cpp  test_paged_attention.py  test_prefix_cache.cpp  test_quant.cpp  test_quantization_kernels.py  test_quantization_primitives.py  test_quantized_llama_and_serving.py  test_recurrent.cpp  (+14 more)
tests/numerical/: test_ulp_sweep.cpp  ulp.hpp
tools/perf_model/: perf_model.cpp  perf_model.hpp  silicon_sim_main.cpp  test_perf_model.cpp
