[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "longhornai"
version = "0.1.0"
description = "Canonical AI inference kernel library and runtime substrate for Longhorn Silicon accelerators."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "LonghornAI contributors" }]
keywords = ["llm", "inference", "gpu", "kernels", "attention", "quantization", "accelerator"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
lhai = "longhornai.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/LonghornSilicon/LonghornAI"
Repository = "https://github.com/LonghornSilicon/LonghornAI"

[tool.hatch.build.targets.wheel]
packages = ["longhornai"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
